overflow fix

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,6 +18,7 @@ $gvrPink : #C34A85;
 
 .element-atom,.interactive-atom {
     margin: 0 !important;
+    overflow: hidden;
 }
 button{
     background:#333;
